data/derived/fa15/progs/unify/prog1214.ml.out
Characters 223-246:
  |_ -> if( fst x + snd x ) > 9 then (1, (fst x + snd x ) mod 10) else (0, (fst x + snd x ) mod 10)
                                         ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
